--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     </script>
     <script src="app.js">
     </script>
+    <script src="services/StudentsFactory.js">
+    </script>
     <script src="js/StudentsController.js">
+    </script>
+    <script src="js/FieldTripsController.js">
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="container-fluid" ng-controller="StudentCtrl">
+    <div class="container-fluid" ng-controller="StudentsCtrl">
       <div class="row" ng-show="students.length">
         <div class-"col-xs-4">
           <form class="form-inline" role="form">
@@ -22,22 +26,43 @@
           </form>
         </div>
       </div>
+
       <div class="col-xs-4">
         <h2>New Student</h2>
-        <form ng-submit="addStudent()" class="form-inline" role="form">
+        <form ng-submit="StudentsFactory.addStudent()" class="form-inline" role="form">
           <div class="form-group">
-            <input type="text" ng-model="studentName" class="form-control" placeholder="Enter name">
+            <input type="text" ng-model="StudentsFactory.studentName" id="student-name" class="form-control" placeholder="Enter name">
           </div>
           <button type="submit" class="btn btn-success">Submit</button>
         </form>
       </div>
+        <div class="row" ng-controller="FieldTripsCtrl">
+          <div class="col-xs-4" ng-show="studentsWithoutPermission.length">
+            <h3>Without Permission Slips</h3>
+            <ul>
+              <li ng-repeat="item in studentsWithoutPermission = (students | filter:{permissionSlip: false})">
+                {{item.name}} <a ng-click="addStudentWithPermissionSlip(item)"> - received permission slip -</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-xs-4" ng-show="studentsWithPermission.length">
+            <h3>With Permission Slips</h3>
+            <ul>
+              <li ng-repeat="item in studentsWithPermission = (student | filter:{permissionSlip: true})">
+                {{item.name}}
+            </li>
+          </ul>
+        </div
+      </div>
+    </div>
+
       <div class="col-xs-12">
         <h2 ng-show="students.length && filtered.length">Student List</h2>
         <h2 ng-show="students.length && !filtered.length">Nada</h2>
         <ul>
           <li ng-repeat="item in filtered = (students | filter:query)">
             <span ng-click="editing = true" ng-hide="editing">
-              {{item.name}} <a ng-click="deleteStudent(item)">X</a>
+              {{item.name}} <a ng-click="StudentsFactory.deleteStudent(item)">x</a>
             </span>
             <span class="form-group" ng-show="editing" ng-submit="editing = false">
               <form class="form-inline" role="form">
@@ -48,6 +73,7 @@
           </li>
         </ul>
       </div>
+
     </div>
   </body>
 </html>
